# clipboard-history

./: .gitignore  Cargo.toml  README.md  clipboard-daemon.service  com.github.clipboard-history.desktop
crates/clipboard-applet/: Cargo.toml
crates/clipboard-applet/i18n/en/: clipboard_applet.ftl
crates/clipboard-applet/i18n/pt-BR/: clipboard_applet.ftl
crates/clipboard-applet/src/: main.rs
crates/clipboard-daemon/: Cargo.toml
crates/clipboard-daemon/src/: main.rs
crates/clipboard-launcher/: Cargo.toml  com.github.clipboard-history.Launcher.desktop
crates/clipboard-launcher/i18n/en/: clipboard_launcher.ftl
crates/clipboard-launcher/i18n/pt-BR/: clipboard_launcher.ftl
crates/clipboard-launcher/src/: main.rs
