[package]
name = "clipboard-applet"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "single-instance"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
emojis = "0.6"
tokio = { version = "1", features = ["time"] }
