[package]
name = "clipboard-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["winit", "multi-window", "wayland", "tokio"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
fs2 = "0.4"
emojis = "0.6"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = "8"
once_cell = "1"
